fixing desktop title align

--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -5,6 +5,7 @@
 		+mq('bp-4')
 			bottom 1rem
 			left 0
+			top auto
 
 		&.is-hidden
 			pointer-events none
@@ -138,3 +139,6 @@
 		visibility: visible;
 		top 0
 		right 0
+		display block
+		+mq('bp-4')
+			display none
